--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langchain-openai>=0.2.14",
     "langchain-anthropic>=0.3.1",
     "langchain-fireworks>=0.2.5",
+    "langchain-aws>=0.2.10",
     "langchain-google-genai>=2.0.8",
     "pydantic>=2.10.4",
     "python-dotenv>=1.0.1",
