--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "requests>=2.32.3",
     "posthog>=3.7.0",
     "playwright>=1.49.0",
-    "setuptools>=75.8.0"
+    "setuptools>=75.8.0",
+    "lmnr[langchain]>=0.4.53"
 ]
 
 [project.optional-dependencies]
