--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ description = "Make websites accessible for AI agents"
 authors = [
     { name = "Gregor Zunic" }
 ]
-version = "0.1.24"
+version = "0.1.25"
 readme = "README.md"
 requires-python = ">=3.11"
 classifiers = [
@@ -16,12 +16,13 @@ dependencies = [
     "MainContentExtractor>=0.0.4",
     "beautifulsoup4>=4.12.3",
     "httpx>=0.27.2",
-    "langchain>=0.3.14",
-    "langchain-openai>=0.3.0",
-    "langchain-anthropic>=0.3.1",
-    "langchain-fireworks>=0.2.5",
-    "langchain-aws>=0.2.10",
-    "langchain-google-genai>=2.0.8",
+    "langchain==0.3.14",
+    "langchain-openai==0.3.1",
+    "langchain-anthropic==0.3.3",
+    "langchain-ollama==0.2.2",
+    "langchain-fireworks>=0.2.6",
+    "langchain-aws>=0.2.11",
+    "langchain-google-genai==2.0.8",
     "pydantic>=2.10.4",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
