added slack events api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,10 @@ dependencies = [
     "posthog>=3.7.0",
     "playwright>=1.49.0",
     "setuptools>=75.8.0",
-    "lmnr[langchain]>=0.4.53"
+    "lmnr[langchain]>=0.4.53",
+    "fastapi==0.115.7",
+    "uvicorn==0.34.0",
+    "slack_sdk==3.34.0"
 ]
 
 [project.optional-dependencies]
