add markdownify to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "posthog>=3.7.0",
     "playwright>=1.49.0",
     "setuptools>=75.8.0",
-    "lmnr[langchain]>=0.4.53"
+    "lmnr[langchain]>=0.4.53",
+    "markdownify==0.14.1"
 ]
 
 [project.optional-dependencies]
