--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,7 @@ dependencies = [
     "playwright>=1.49.0",
     "setuptools>=75.8.0",
     "lmnr[langchain]>=0.4.59",
-    "markdownify==0.14.1",
-    "fastapi>=0.115.8",
-    "inngest>=0.4.19",
-    "uvicorn>=0.34.0",
+    "markdownify==0.14.1"
 ]
 
 [project.optional-dependencies]
@@ -42,7 +39,10 @@ dev = [
     "hatch>=1.13.0",
     "build>=1.2.2",
     "pytest>=8.3.3",
-    "pytest-asyncio>=0.24.0"
+    "pytest-asyncio>=0.24.0",
+    "fastapi>=0.115.8",
+    "inngest>=0.4.19",
+    "uvicorn>=0.34.0"
 ]
 
 [tool.ruff]
