--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ classifiers = [
 ]
 dependencies = [
     "httpx>=0.27.2",
-    "langchain==0.3.14",
     "pydantic>=2.10.4",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
@@ -21,6 +20,7 @@ dependencies = [
     "setuptools>=75.8.0",
     "lmnr[langchain]>=0.4.59",
     "markdownify==0.14.1",
+    "langchain-core>=0.3.35",
 ]
 
 [project.optional-dependencies]
@@ -33,6 +33,7 @@ dev = [
     "fastapi>=0.115.8",
     "inngest>=0.4.19",
     "uvicorn>=0.34.0",
+    "langchain>=0.3.18",
     "langchain-anthropic==0.3.3",
     "langchain-aws>=0.2.11",
     "langchain-fireworks>=0.2.6",
