--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ dependencies = [
     "requests>=2.32.3",
     "posthog>=3.7.0",
     "playwright>=1.49.0",
-    "setuptools>=75.8.0",  # @todo tbc if we need this as runtime dep.
     "markdownify==0.14.1",
     "langchain-core>=0.3.35",
     "langchain-openai==0.3.1",
@@ -54,3 +53,9 @@ docstring-code-format = true
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build]
+include = [
+  "browser_use/dom/buildDomTree.js",
+]
+
