--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "setuptools>=75.8.0",
     "markdownify==0.14.1",
     "langchain-core>=0.3.35",
-    "langchain-openai==0.3.1",
+    "langchain-openai>=0.3.1",
     "langchain-anthropic==0.3.3",
     "langchain-ollama==0.2.2",
 ]
