--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
+AZURE_ENDPOINT=
+AZURE_OPENAI_API_KEY=
+GEMINI_API_KEY=
+DEEPSEEK_API_KEY=
 
 # Set to false to disable anonymized telemetry
 ANONYMIZED_TELEMETRY=true
