--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,17 +24,20 @@ dependencies = [
     "langchain-ollama==0.2.2",
     "google-api-core>=2.24.0",
     "pyperclip>=1.9.0",
-    # only used for examples that use copy/paste
     "pyobjc>=11.0; platform_system == 'darwin'",
-    # only used to get screen resolution on macOS
     "screeninfo>=0.8.1; platform_system != 'darwin'",
     "typing-extensions>=4.12.2",
-    # only used to get screen resolution on Linux/Windows
 ]
+# google-api-core: only used for Google LLM APIs
+# pyperclip: only used for examples that use copy/paste
+# pyobjc: only used to get screen resolution on macOS
+# screeninfo: only used to get screen resolution on Linux/Windows
+# markdownify: used for page text content extraction for passing to LLM
 urls = { "Repository" = "https://github.com/browser-use/browser-use" }
 
 [project.optional-dependencies]
 dev = [
+    "ruff>=0.11.2",
     "tokencost>=0.1.16",
     "build>=1.2.2",
     "pytest>=8.3.3",
@@ -69,5 +72,10 @@ include = [
   "!browser_use/**/tests.py",
   "browser_use/agent/system_prompt.md",
   "browser_use/dom/buildDomTree.js",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "ruff>=0.11.2",
 ]
 
