--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install pre-commit
-      - run: pre-commit run check-toml          --all-files
-      - run: pre-commit run check-yaml          --all-files
-      - run: pre-commit run end-of-file-fixer   --all-files
-      - run: pre-commit run trailing-whitespace --all-files
+      - uses: astral-sh/setup-uv@v5
+      - run: uv run ruff format
+      - run: uv run pytest tests/conftest.py
+      - run: uv run pre-commit run check-toml          --all-files
+      - run: uv run pre-commit run check-yaml          --all-files
+      - run: uv run pre-commit run end-of-file-fixer   --all-files
+      - run: uv run pre-commit run trailing-whitespace --all-files
