--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,17 +1,17 @@
-name: ci
+name: Lint
 on:
   push:
   pull_request:
   workflow_dispatch:
 jobs:
-  pre-commit:
+  ruff:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v5
       - run: uv run ruff format
-      - run: uv run pytest tests/conftest.py
       - run: uv run pre-commit run check-toml          --all-files
       - run: uv run pre-commit run check-yaml          --all-files
       - run: uv run pre-commit run end-of-file-fixer   --all-files
       - run: uv run pre-commit run trailing-whitespace --all-files
+      #- run: uv run pytest tests/conftest.py
