--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,10 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.0
+    rev: v0.11.2
     hooks:
       - id: ruff
-        args: [
-            --line-length=130,
-            --select=E,F,I,
-            --fix,
-        ]
+      - id: ruff-format
+      # see pyproject.toml for more details on ruff config
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
