--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,18 +10,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v5
       - run: uv run ruff format
-      - run: uv run pre-commit run check-toml --all-files
-      - run: uv run pre-commit run check-yaml --all-files
-      - run: uv run pre-commit run check-json --all-files
-      - run: uv run pre-commit run end-of-file-fixer --all-files
-      - run: uv run pre-commit run check-merge-conflict --all-files
-      - run: uv run pre-commit run check-illegal-windows-names --all-files
-      - run: uv run pre-commit run check-case-conflict --all-files
-      - run: uv run pre-commit run check-added-large-files --all-files
-      - run: uv run pre-commit run check-shebang-scripts-are-executable --all-files
-      - run: uv run pre-commit run check-symlinks --all-files
-      - run: uv run pre-commit run destroyed-symlinks --all-files
-      - run: uv run pre-commit run detect-private-key --all-files
-      - run: uv run pre-commit run mixed-line-ending --all-files
-      - run: uv run pre-commit run fix-byte-order-marker --all-files
-      #- run: uv run pytest tests/conftest.py
+      - run: uv run pre-commit run --all-files
+      # TODO: Fix the ignored pytests.
+      # openai.OpenAIError: The api_key client option must be set either by passing
+      # api_key to the client or by setting the OPENAI_API_KEY environment variable
+      - run: uv run --with=dotenv pytest
+                --ignore=tests/test_dropdown_error.py
+                --ignore=tests/test_gif_path.py
+                --ignore=tests/test_models.py
+                --ignore=tests/test_react_dropdown.py
+                --ignore=tests/test_save_conversation.py
+                --ignore=tests/test_vision.py
+                --ignore=tests/test_wait_for_element.py
