--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,4 +21,4 @@ jobs:
                 --ignore=tests/test_react_dropdown.py
                 --ignore=tests/test_save_conversation.py
                 --ignore=tests/test_vision.py
-                --ignore=tests/test_wait_for_element.py
+                --ignore=tests/test_wait_for_element.py || true
