uv add --dev codespell

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,4 +91,5 @@ dev-dependencies = [
     "langchain-fireworks>=0.2.6",
     "ipdb>=0.13.13",
     "pre-commit>=4.2.0",
+    "codespell>=2.4.1",
 ]
